gitops/apps/minio/generic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-generic
spec:
  type: ClusterIP
  selector:
    app: minio-generic
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
