gitops/apps/minio/generic/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-generic
spec:
  parentRefs:
    - name: public
      namespace: istio-system
      sectionName: https
  hostnames:
    - minio.didactiklabs.io
  rules:
    - backendRefs:
        - name: minio-generic
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-generic-api
spec:
  parentRefs:
    - name: public
      namespace: istio-system
      sectionName: https
  hostnames:
    - s3.didactiklabs.io
  rules:
    - backendRefs:
        - name: minio-generic
          port: 9000
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: minio-upload-fix
spec:
  host: minio-generic
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 30m
      tcp:
        tcpKeepalive:
          time: 7200s
          interval: 75s
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: minio-stream-timeout
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio.io/gateway-name: public
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stream_idle_timeout: 0s
